--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-  <title>I HAVE NO TITLE :( Please deduct a grade from me.</title>
+  <title>It is as if you were on your phone</title>
 
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -23,6 +23,18 @@
 
 <body>
   <!-- HTML would go here if needed. -->
+
+  <!-- FOR PIPPINBARR.COM -->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GECKZQ62DH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-GECKZQ62DH');
+  </script>
 </body>
 
 </html>
