--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <script src="js/libraries/hammer.min.js"></script>
 
   <!-- My script(s) -->
+  <script src="js/swiping.js"></script>
+  <script src="js/typing.js"></script>
+  <script src="js/tapping.js"></script>
+  <script src="js/acting.js"></script>
   <script src="js/main.js"></script>
 </head>
 
