--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
   <script src="js/libraries/hammer.min.js"></script>
 
   <!-- My script(s) -->
-  <script src="js/swiping.js"></script>
-  <script src="js/typing.js"></script>
-  <script src="js/tapping.js"></script>
-  <script src="js/acting.js"></script>
+  <script src="js/interactions/Interaction.js"></script>
+  <script src="js/interactions/Tap.js"></script>
+
+  <script src="js/states/State.js"></script>
+  <script src="js/states/Browsing.js"></script>
+
   <script src="js/main.js"></script>
 </head>
 
