--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <!-- My script(s) -->
   <script src="js/interactions/Interaction.js"></script>
   <script src="js/interactions/Tap.js"></script>
+  <script src="js/interactions/Scroll.js"></script>
+  <script src="js/interactions/ScrollDown.js"></script>
 
   <script src="js/states/State.js"></script>
   <script src="js/states/Browsing.js"></script>
