Implemented basic dating
- That is a collection of swipes according to probability, currently being done very bluntly by proportional representation in an array that is then queried randomly... feels inelegant
- Starting to seem to me I may want to look at configuration data differently from just having a class for every single kind of thing? I could be wrong... but they aren't representing much more than a confiration object anyway, and maybe that can be a bit more compact than this.
- Particularly will make sense sometimes to define probabilities on how often specific interactions show up
- Does Tracery do this? Should I be consideration grammars from the outset or is that overkill for this particular project?
- Anyway I'm satisfied by how relatively easy I was able to get Dating v1 up and running simply because of the (not amazing, but useful) engineering a put in initially?
- Haven't tested it on my phone yet
- Swiping unlike scrolling I have not included a continuous visual feedback thing, so it's just swipe or not swipe... but I would need some way of showing the user they did it other than just showing that they proceed to the next swipe?
- But anyway, the bones are going in eh

--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
   <script src="js/interactions/Tap.js"></script>
   <script src="js/interactions/Scroll.js"></script>
   <script src="js/interactions/ScrollDown.js"></script>
+  <script src="js/interactions/Swipe.js"></script>
+  <script src="js/interactions/SwipeHorizontal.js"></script>
+  <script src="js/interactions/SwipeLeft.js"></script>
+  <script src="js/interactions/SwipeRight.js"></script>
+  <script src="js/interactions/SwipeUp.js"></script>
 
   <script src="js/states/State.js"></script>
   <script src="js/states/Browsing.js"></script>
+  <script src="js/states/Dating.js"></script>
 
   <script src="js/main.js"></script>
 </head>
