Introducing basic acting back in (serial)
- I don't know how it feels yet and there are many timing issues involved here
- Should the user have to acknowledge the act (by clicking an "ok" button)?
- Or you just give them time to read it and do it and then move on based on the timer
- It's nice to have it back in there, and more testament to engineering that it was easy to do by changing the hierarchy a bit, what a guy, so excited by OOP right now
- I now have enough to start thinking about switching activities, and thus to thinking significantly more about overall feel and longitudinal use?

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <script src="js/libraries/hammer.min.js"></script>
 
   <!-- My script(s) -->
+  <script src="js/actions/Action.js"></script>
+
   <script src="js/interactions/Interaction.js"></script>
   <script src="js/interactions/Tap.js"></script>
   <script src="js/interactions/Scroll.js"></script>
@@ -29,6 +31,8 @@
   <script src="js/interactions/SwipeLeft.js"></script>
   <script src="js/interactions/SwipeRight.js"></script>
   <script src="js/interactions/SwipeUp.js"></script>
+
+  <script src="js/acts/Act.js"></script>
 
   <script src="js/states/State.js"></script>
   <script src="js/states/Browsing.js"></script>
