Reintegrating acts/interactions and reducing OOP hierarchy
- Started this by getting Acts back into the main flow, so it's not a serial thing anymore but rather the acts and intertactions run in parallel on different timing (well, interactions are interaction based, the acts are random timing right now) - even viewing this on desktop showed it to be a significant improvement
- aka Why the fuck didn't you just keep it the way it was in Chess?
- And then in the heat of the moment I always went through and removed all the specialized subclassing of different interaction categories and replaced them with functions that generate configuration objects
- Probably has its own flaws but feels a little bit more sensible for this moment at least
- Could be busywork a little bit, but busywork keeps the buzzy bees buzzing

--- a/index.html
+++ b/index.html
@@ -22,21 +22,20 @@
   <!-- My script(s) -->
   <script src="js/actions/Action.js"></script>
 
+  <script src="js/interactions/taps.js"></script>
+  <script src="js/interactions/swipes.js"></script>
+  <script src="js/interactions/scrolls.js"></script>
+
   <script src="js/interactions/Interaction.js"></script>
   <script src="js/interactions/Tap.js"></script>
   <script src="js/interactions/Scroll.js"></script>
-  <script src="js/interactions/ScrollDown.js"></script>
   <script src="js/interactions/Swipe.js"></script>
-  <script src="js/interactions/SwipeHorizontal.js"></script>
-  <script src="js/interactions/SwipeLeft.js"></script>
-  <script src="js/interactions/SwipeRight.js"></script>
-  <script src="js/interactions/SwipeUp.js"></script>
 
   <script src="js/acts/Act.js"></script>
 
-  <script src="js/states/State.js"></script>
-  <script src="js/states/Browsing.js"></script>
-  <script src="js/states/Dating.js"></script>
+  <script src="js/activities/Activity.js"></script>
+  <script src="js/activities/Browsing.js"></script>
+  <script src="js/activities/Dating.js"></script>
 
   <script src="js/main.js"></script>
 </head>
