Added in a basic typing activity
- I already had this in the very early prototype but now it has been integrated (read: kind of jammed) into the new structures of data and so on
- I'm not all that happy about how much jiggling it took to make it work, but I'm also not totally mad at it; I think with a clear head I'll be able to understand what to do a bit
- In essence I ran up against the desire to add some context-specific configuration elements to interactions, such as specifying the x and y of a particular tap, say... it may be I'm bumping up against some bad engineering of my own but I think there seems to be a semi-alright solution for now?
- I'll have to test out how the typing feels but it's basically the same as I had previously so not anticipating much beyond it basically working and needing various tweaks to feel just right
- Once I add a "scrolling and double tapping" activity I'll have a nice set of distinctive activities I could be switching between over time...

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
   <script src="js/interactions/Tap.js"></script>
   <script src="js/interactions/Scroll.js"></script>
   <script src="js/interactions/Swipe.js"></script>
+  <script src="js/interactions/Type.js"></script>
 
   <script src="js/acts/Act.js"></script>
 
   <script src="js/activities/Activity.js"></script>
   <script src="js/activities/Browsing.js"></script>
   <script src="js/activities/Dating.js"></script>
+  <script src="js/activities/Typing.js"></script>
 
   <script src="js/main.js"></script>
 </head>
