Added "Photos" (Instagram)
- Currently a pretty inane version, but it does include relative probabilities of taps, double-taps, and scrolling
- There's no grammar of action so you could end up double-tapping like three times in a row which doesn't make sense
- Because this is such a strongly visual UI thing to me (I can see Instagram in my head as I interact with it), it has felt very flawed indeed and has helped to point out a bunch of stuff around how these UIs work/don't work
- There's the action grammar thing - the idea that there are packagings/sequencings of actions (scroll, double-tap, scroll, scroll, double-tap) -- sequences that make sense in the specific context of that UI and that I semi-believe CAN be seen when you watch someone without seeing their screen...
- The question of interactions that are location specific, the keyboard was one, but now we also have the idea of a tap that would be centred (on an image you are liking) rather than just somewhere random on the screen... perhaps random within a box?
- The directionality of swipe/pan relative to scrolling is pretty fucking confusing... you swipe up to scroll down, so indicating that is actually pretty strange and hard. Has made me wonder if we want a kind of "fake content" display that helps make sense of it? But by god it starts to be like the Map and the Territory??? Which is funny af but scary af
- But yeah that would open up the idea of scrolling a square into view and double-tapping it for instance... getting closer to the specialized suite I was imagining... but it's really surprisingly hard to draw a good line on this
- So yeah, a lot to chew on. Call me Borges.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <script src="js/interactions/Interaction.js"></script>
   <script src="js/interactions/Tap.js"></script>
+  <script src="js/interactions/DoubleTap.js"></script>
   <script src="js/interactions/Scroll.js"></script>
   <script src="js/interactions/Swipe.js"></script>
   <script src="js/interactions/Type.js"></script>
@@ -38,6 +39,7 @@
   <script src="js/activities/Browsing.js"></script>
   <script src="js/activities/Dating.js"></script>
   <script src="js/activities/Typing.js"></script>
+  <script src="js/activities/Photos.js"></script>
 
   <script src="js/main.js"></script>
 </head>
