Made a more random activity of "Phoning"
- But it feels a bit broken for exactly right now? I thought totally abandoning the more specific activities would be good, but it does lack something without them. In particular I think the "typing" activity now kind of stands out too much? Should it be removed as too clearly "doing a specific thing"?
- And yet tapping away on the keyboard is such an "on my phone" thing it would be a bit of a shame to lose it... hmmm...
- Maybe there need to be activities of like "now we're swiping for a while" and "now we're panning for a while" and "now we're tapping for a while"?
- Also I will feel better when I add some of the UI stuff like the moving swipe arrow and the change to the scrolling appearance (i.e. making it less like scrolling and more generic)
- Anyway probably a step in the right direction but too "partway" to feel really good...

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
   <script src="js/acts/Act.js"></script>
 
   <script src="js/activities/Activity.js"></script>
-  <script src="js/activities/Browsing.js"></script>
-  <script src="js/activities/Dating.js"></script>
-  <script src="js/activities/Typing.js"></script>
-  <script src="js/activities/Photos.js"></script>
+  <script src="js/activities/Phoning.js"></script>
+  <!-- <script src="js/activities/Browsing.js"></script> -->
+  <!-- <script src="js/activities/Dating.js"></script> -->
+  <!-- <script src="js/activities/Typing.js"></script> -->
+  <!-- <script src="js/activities/Photos.js"></script> -->
 
   <script src="js/main.js"></script>
 </head>
