Added Look Here and Watch Box interactions
- Nice to have these passive additions as I think it helps with the pacing a bit
- I still have this sense that I'm going to have to do some user testing on what this feels like, but I'm trying to cling more or less purely to the idea it just "looks like" you're on your phone, not that it looks like you're doing something legible
- Every time I demo this for someone they seem to really GET it, which is pretty awesome as an anecdotal piece of feedback

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script src="js/interactions/taps.js"></script>
   <script src="js/interactions/swipes.js"></script>
   <script src="js/interactions/scrolls.js"></script>
+  <script src="js/interactions/looks.js"></script>
 
   <script src="js/interactions/Interaction.js"></script>
   <script src="js/interactions/Tap.js"></script>
@@ -32,6 +33,8 @@
   <script src="js/interactions/Scroll.js"></script>
   <script src="js/interactions/Swipe.js"></script>
   <script src="js/interactions/Type.js"></script>
+  <script src="js/interactions/LookHere.js"></script>
+  <script src="js/interactions/LookBox.js"></script>
 
   <script src="js/acts/Act.js"></script>
 
