Working on dragging gesture
- Running to a bunch of trouble here because it seems like the pan event starts returning 0,0 as the position suddenly in the browser's phone simulation mode... need to at least check if that happens on my phone too... if not, then I can work around it, if so... then why?
- Otherwise there's progress here, alongside the entirely predictable bullshit of working with mobile and finnicks

--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
 
   <script src="js/interactions/taps.js"></script>
   <script src="js/interactions/swipes.js"></script>
-  <script src="js/interactions/scrolls.js"></script>
+  <!-- <script src="js/interactions/scrolls.js"></script> -->
+  <script src="js/interactions/drags.js"></script>
   <script src="js/interactions/looks.js"></script>
 
   <script src="js/interactions/Interaction.js"></script>
   <script src="js/interactions/Tap.js"></script>
   <script src="js/interactions/DoubleTap.js"></script>
-  <script src="js/interactions/Scroll.js"></script>
+  <!-- <script src="js/interactions/Scroll.js"></script> -->
+  <script src="js/interactions/Drag.js"></script>
   <script src="js/interactions/Swipe.js"></script>
   <script src="js/interactions/Type.js"></script>
   <script src="js/interactions/LookHere.js"></script>
@@ -50,6 +52,7 @@
 
 <body>
   <!-- HTML would go here if needed. -->
+  <div id="container"></div>
 
   <!-- FOR PIPPINBARR.COM -->
 
