--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <!-- <script src="js/activities/Typing.js"></script> -->
   <!-- <script src="js/activities/Photos.js"></script> -->
 
+  <script src="js/helpers.js"></script>
   <script src="js/main.js"></script>
 </head>
 
