Basic menu with standard and zen modes
- A bit of an addled work session where I tried to do too many things and kind of "deengineered" stuff perhaps... it feels messier and more brittle again suddenly as I tried to do stuff like have a higher level State class to handle the menu (and eventually help) screens as well as the activity(ies)
- Stuff around text and sound and timing for zen vs. standard represented as data and generation functions... which is a good thing in principle
- Just a feeling of going too far down into the code and 100% not thinking about the meaning of the project - I suppose you could say I'm trying to have faith in the power of the to do list, but there's also a sense I have of making choices that I may have to undo because one way or another they don't support the central goal? We'll see.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="js/libraries/hammer.min.js"></script>
 
   <!-- My script(s) -->
+
   <script src="js/actions/Action.js"></script>
 
   <script src="js/interactions/taps.js"></script>
@@ -38,7 +39,10 @@
   <script src="js/interactions/LookBox.js"></script>
 
   <script src="js/acts/Act.js"></script>
+  <script src="js/acts/actings.js"></script>
 
+  <script src="js/State.js"></script>
+  <script src="js/Menu.js"></script>
   <script src="js/activities/Activity.js"></script>
   <script src="js/activities/Phoning.js"></script>
   <!-- <script src="js/activities/Browsing.js"></script> -->
@@ -46,6 +50,7 @@
   <!-- <script src="js/activities/Typing.js"></script> -->
   <!-- <script src="js/activities/Photos.js"></script> -->
 
+  <script src="js/Button.js"></script>
   <script src="js/helpers.js"></script>
   <script src="js/main.js"></script>
 </head>
