Put in a very placeholder Info screen
- I'm concerned about all the bullshit involved in making this work responsively quite frankly - it's getting uglier the more I try to fight with it
- Whatever the case I won't have much space to write about what the two modes mean so it'll have to pithy as all get out

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
   <script src="js/State.js"></script>
   <script src="js/Menu.js"></script>
+  <script src="js/Info.js"></script>
   <script src="js/activities/Activity.js"></script>
   <script src="js/activities/Phoning.js"></script>
   <!-- <script src="js/activities/Browsing.js"></script> -->
