Moved the acting instructions for Watching into the box (care of Matt)
- Matt suggested this at coffee and it's such a good idea I plowed through a *lot* of it not working with my code and breaking a lot of rules and so on to get it in there, but I'm glad I did
- Why is the text in the box now top left aligned? Because p5 will be damned if it will center vertical align something in a box and I don't care to fight it further by writing my own line-wrapping thankyouverymuch
- I think it feels pretty good
- As I commit this commit I am thinking very seriously about cutting the zen mode - I'll write a journal about all that in a sec

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <script src="js/interactions/swipes.js"></script>
   <!-- <script src="js/interactions/scrolls.js"></script> -->
   <script src="js/interactions/drags.js"></script>
-  <script src="js/interactions/looks.js"></script>
+  <script src="js/interactions/watches.js"></script>
 
   <script src="js/interactions/Interaction.js"></script>
   <script src="js/interactions/Tap.js"></script>
@@ -36,7 +36,7 @@
   <script src="js/interactions/Drag.js"></script>
   <script src="js/interactions/Swipe.js"></script>
   <script src="js/interactions/Type.js"></script>
-  <script src="js/interactions/LookBox.js"></script>
+  <script src="js/interactions/Watch.js"></script>
 
   <script src="js/acts/Act.js"></script>
   <script src="js/acts/actings.js"></script>
